Cypher Shell: Extend SysInfo to work with new internal procedure ()
Team Sharding added a new procedure
https://github.com/neo-technology/neo4j/pull/35933, this can be used by
Cypher Shell in :sysInfo command so that it will now work on SPD
databases.

The internal procedure is already tested, and as Cypher shell just calls
it, I haven't added SPD specific tests.

I made some more udpates (PM approved) to the sysInfo command, to unifiy
it with Query. HOME has been added to db info. The values are now
formatted (this is handled by the internal proc). The extra info tables
are now omitted for community databases as they are not useful there.